k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orc-service
  namespace: production
  labels:
    app: orc-service
spec:
  type: ClusterIP
  selector:
    app: orc-service
  ports:
    - name: http
      port: 8899
      targetPort: http
      protocol: TCP
